@@ -40,6 +40,7 @@ FIXES
 * Fixed duplicate nodes in map (#471) (Bryan Heden)
 * Fixed service groups defined with unknown service members (that aren't first in the list) not erroring out (#500) (Bryan Heden)
 * Fixed tac.cgi to have consistent behavior with the other cgis (#481) (Bryan Heden, Matt Capra)
+* Fixed clear_host/service_flapping command logic to broker/notify properly (#525) (Bryan Heden, Karsten Weiss)
 
 
 4.3.4 - 2017-08-24
